--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
+    "start": "PORT=80 node index.js",
     "start:dev": "nodemon index.js"
   },
   "author": "",
